@@ -5,6 +5,7 @@
 	* src/color.c (color_update): Look for a default syntax only when
 	all else failed -- forego the small, complicating optimization.
 	* src/color.c (color_update): Strip things bare to see the sameness.
+	* src/color.c (found_in_list): Factor out this triple repetition.
 
 GNU nano 2.5.3 - 2016.02.25
 
